--- a/calc.html
+++ b/calc.html
@@ -1,49 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8"/>
-      <mata name="viewport" content="width=device-width initial-scale=1.0" />
-      <title>Calculator</title>
-      <link rel="stylesheet" href="calc.css"/>
-   </head>
-   <body>
-      <div class="calculator_block">
-         <div class="claculator_display">
-            <p id="result">0</p>
-         </div> 
-         <div class="buttons">
-            <div class="row">
-               <button>C</button>
-               <button>DEL</button>
-               <button>+</button>
-               <button>%</button>
-            </div>
-            <div class="row">
-               <button>7</button>
-               <button>8</button>
-               <button>9</button>
-               <button>/</button>
-            </div>
-            <div class="row">
-               <button>4</button>
-               <button>5</button>
-               <button>6</button>
-               <button>*</button>
-            </div>
-            <div class="row">
-               <button>1</button>
-               <button>2</button>
-               <button>3</button>
-               <button>-</button>
-            </div>
-            <div class="row">
-               <button id="dot">.</button>
-               <button>0</button>
-               <button id="equal">=</button>
-            </div>
-         </div>
 
+<head>
+   <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width initial-scale=1.0" />
+   <title>Calculator JS</title>
+   <link rel="stylesheet" href="calc.css" />
+</head>
+
+<body>
+   <h1 class="title">Calculator JS</h1>
+   <div class="calculator_block">
+      <div class="claculator_display">
+         <p id="result">0</p>
       </div>
-      <script src="calc.js"></script>
-   </body>
+      <div class="buttons">
+         <div class="row">
+            <button>C</button>
+            <button>DEL</button>
+            <button>+</button>
+            <button>%</button>
+         </div>
+         <div class="row">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>/</button>
+         </div>
+         <div class="row">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>*</button>
+         </div>
+         <div class="row">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>-</button>
+         </div>
+         <div class="row">
+            <button id="dot">.</button>
+            <button>0</button>
+            <button id="equal">=</button>
+         </div>
+      </div>
+
+   </div>
+   <script src="calc.js"></script>
+</body>
+
 </html>
